src/test/ui/match/match-ref-ice.stderr
error: unreachable pattern
  --> $DIR/match-ref-ice.rs:13:9
   |
LL |         [1, 2, 3] => (),
   |         ^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/match-ref-ice.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

